<resources>
    <string name="app_name">Fun Nums</string>
    <string name="play_button">Select Game</string>
    <string name="high_score_button">View High Scores</string>
    <string name="settings_button">Settings</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="bubble_leaderboard">Bubble Leaderboard</string>
    <string name="balloon_leaderboard">Balloon Leaderboard</string>
    <string name="owl_leaderboard">Owl Leaderboard</string>

    <string name="balloon_scores">Balloon</string>
    <string name="bubble_scores">Bubble</string>
    <string name="owl_scores">Owl</string>

    <string name="user_label">Username</string>
    <string name="score_label">Score</string>
    <string name="how_to_play">How to Play</string>
    <string name="game1">Bubbles</string>
    <string name="game2">Balloons</string>
    <string name="game3">Owl</string>

    <string name="pop_up_next">Next</string>
    <string name="pop_up_prev">Previous</string>

    <string name="high_score">High Score: </string>
</resources>
