<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:layout_editor_absoluteY="81dp"
tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textLeaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp" />

    <TextView
        android:id="@+id/textUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_label"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textLeaderboard" />

    <TextView
        android:id="@+id/textScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_label"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textLeaderboard"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@+id/textUserLabel" />


</RelativeLayout>