<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bubble_game_icon"
        android:layout_marginLeft="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="29dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game1"
        android:textSize="40sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintHorizontal_bias="0.15" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.287" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/balloon_game_icon"
        android:layout_marginLeft="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game2"
        android:textSize="40sp"
        tools:layout_editor_absoluteY="164dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButton2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.19" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButton2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.444" />


</android.support.constraint.ConstraintLayout>
